vcluster_versioned_docs/version-0.26.0/_partials/config/rbac.mdx

<details className="config-field" data-expandable="true">
<summary>

## `rbac` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac}

RBAC options for the virtual cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `role` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-role}

Role holds virtual cluster role configuration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-role-enabled}

Enabled defines if the role should be enabled or disabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `extraRules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-role-extraRules}

ExtraRules will add rules to the role.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `overwriteRules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-role-overwriteRules}

OverwriteRules will overwrite the role rules completely.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `clusterRole` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-clusterRole}

ClusterRole holds virtual cluster cluster role configuration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string|boolean</span> <span className="config-field-default">auto</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-clusterRole-enabled}

Enabled defines if the cluster role should be enabled or disabled. If auto, vCluster automatically determines whether the virtual cluster requires a cluster role.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `extraRules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-clusterRole-extraRules}

ExtraRules will add rules to the cluster role.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `overwriteRules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#rbac-clusterRole-overwriteRules}

OverwriteRules will overwrite the cluster role rules completely.

</summary>



</details>


</details>


</details>
